--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,8 @@
+:root {
+    --common-text-color: #333333; 
+    --footer-text-color: #CACACA;
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -5,9 +10,20 @@
 }
 
 body {
+    max-width: 1920px;
+
     font-family: "Montserrat", "Arial", "Helvettica";
     font-weight: 400;
     font-size: 16px;
     color: #333333;
     line-height: 1;
+}
+
+.container {
+    max-width: 1770px;
+    margin: 0 auto;
+}
+
+main {
+    background: #e5e5e5;
 }
