--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -22,10 +22,17 @@ a {
 }
 
 button {
+    padding: 0;
+
     border: none;
     background: transparent;
     cursor: pointer;
     user-select: none;
+}
+
+input, textarea {
+    border: none;
+    resize: none;
 }
 
 body {
@@ -337,8 +344,8 @@ body {
 }
 
 .step-content__more {
-    padding: 17px 39px 17px 35px;
-    margin-right: 35px;
+    padding: 20px 33px 20px 41px;
+    margin-right: 30px;
 
     font-weight: bold;
     
@@ -347,9 +354,164 @@ body {
 }
 
 .step-content__contract {
-    padding: 17px 39px 17px 35px;
+    padding: 19px 39px 20px 35px;
 
     color: var(--common-text-color);
 
     border: 1px solid black;
+}
+
+.our-work {
+    margin-bottom: 86px;
+}
+
+.faq-title {
+    margin-bottom: 44px;
+}
+
+.faq-list {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 100px;
+    padding-left: 5px;
+}
+
+.faq-list__item {
+    position: relative;
+
+    padding-top: 43px;
+    padding-bottom: 46px;
+    margin-top: -1px;
+
+    border-top: 1px solid var(--border-color);
+    border-bottom: 1px solid var(--border-color);
+}
+
+.faq-list__item span {
+    color: var(--border-color);
+}
+
+.faq-more-btn {
+    position: absolute;
+    top: 32px;
+    right: 2px;
+}
+
+.footer {
+    padding-top: 48px;
+    padding-bottom: 80px;
+
+    font-size: 16px;
+    color: var(--footer-text-color);
+
+    background-color: #222222;
+}
+
+.footer-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-info-container {
+    flex-basis: 20%;
+}
+
+.footer-logo {
+    margin-bottom: 10px;
+}
+
+.footer-info__text {
+    margin-bottom: 44px;
+
+    line-height: 32px;
+}
+
+.social-links {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -25px;
+}
+
+.social-links__item {
+    margin-right: 25px;
+}
+
+.request__title {
+    margin: 0;
+    margin-bottom: 30px;
+
+    font-size: 48px;
+    font-weight: normal;
+    line-height: 1;
+}
+
+.request-container {
+    flex-basis: 28%;
+}
+
+.request-action-container {
+    display: flex;
+    align-items: center;
+}
+
+.request-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.request-form input,
+.request-form textarea {
+    padding: 15px 24px;
+
+    font-family: "Montserrat";
+    font-size: 16px;
+    color: var(--footer-text-color);
+
+    background-color: #414141;
+}
+
+.request-form input:not([type="checkbox"]) {
+    margin-bottom: 25px;
+}
+
+.request-form textarea {
+    margin-bottom: 50px;
+}
+
+.request-form label {
+    font-size: 16px;
+}
+
+.convention {
+    display: flex;
+    align-items: center;
+}
+
+.request-form input[type="submit"] {
+    margin-bottom: 0;
+
+    font-weight: bold;
+    color: white;
+
+    background-color: var(--button-color);
+    cursor: pointer;
+    user-select: none;
+}
+
+.footer-links-container {
+    align-self: center;
+}
+
+.footer-links {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: -15px;
+}
+
+.footer-link {
+    margin-bottom: 15px;
+}
+
+.footer-link a {
+    color: var(--footer-text-color);
 }
