--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -208,6 +208,7 @@ body {
 
 .approaches-wrapper {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin-bottom: 129px;
 }
@@ -217,32 +218,55 @@ body {
 
     display: flex;
     align-items: flex-end;
-    width: 48.3%;
+    width: 49.1%;
 
     background: url("/src/img/decor/about-img.jpg") no-repeat;
-}  
+} 
 
 .approaches-picture__content {
+    position: relative;
+    bottom: 0;
+
     display: flex;
     align-items: center;
     padding: 26px 69px 28px 54px;
     width: 100%;
+    overflow: hidden;
 
     color: white;
     font-weight: bold;
     font-size: 16px;
 
-    background: url("/src/img/decor/about-img-blur.jpg") no-repeat;
-    background-size: cover;
+    background: inherit;
+    background-position: bottom;
+    /* box-shadow:  0 0 40px 0 rgba(0, 0, 0, 0.7); */
+    
+}
+
+.approaches-picture__content:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: -92px;
+
+    display: block;
+    width: 120%;
+    height: 100%;
+
+    background: inherit;
+    box-shadow: inset 0 0 200px rgba(0, 0, 0, 0.2);
+    filter: blur(10px);
 }
 
 .approaches-picture__content p {
+    z-index: 2;
     flex-basis: 67%;
 
     line-height: 30px;
 }
 
 .approaches-picture__content a {
+    z-index: 2;
     margin-left: auto;
 }
 
