--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -219,12 +219,13 @@ body {
     display: flex;
     align-items: flex-end;
     width: 49.1%;
+    overflow: hidden;
 
     background: url("/src/img/decor/about-img.jpg") no-repeat;
 } 
 
 .approaches-picture__content {
-    position: relative;
+    position: absolute;
     bottom: 0;
 
     display: flex;
@@ -239,7 +240,7 @@ body {
 
     background: inherit;
     background-position: bottom;
-    /* box-shadow:  0 0 40px 0 rgba(0, 0, 0, 0.7); */
+    box-shadow:  0 0 40px 0 rgba(0, 0, 0, 0.7);
     
 }
 
@@ -251,7 +252,7 @@ body {
 
     display: block;
     width: 120%;
-    height: 100%;
+    height: 110%;
 
     background: inherit;
     box-shadow: inset 0 0 200px rgba(0, 0, 0, 0.2);
