--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -93,12 +93,13 @@ body {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    margin-right: -70px;
+    margin-right: -85px;
     margin-left: auto;
+    padding-top: 4px;
 }
 
 .main-header-list__item {
-    margin-right: 70px;
+    margin-right: 85px;
 
     font-weight: 600;
     font-size: 18px;
@@ -111,6 +112,7 @@ body {
 
 .main-header__search {
     margin-left: 70px;
+    padding-right: 12px;
     align-self: center;
 }
 
@@ -148,7 +150,7 @@ body {
 
 .main-title {
     margin: 0;
-    margin-bottom: 22px;
+    margin-bottom: 20px;
 
     font-weight: 800;
     font-size: 70px;
@@ -156,7 +158,8 @@ body {
 }
 
 .promo-description {
-    margin-bottom: 122px;
+    margin-top: 0;
+    margin-bottom: 125px;
 
     font-size: 23px;
     line-height: 29px;
@@ -164,7 +167,7 @@ body {
 }
 
 .promo-button {
-    padding: 25px 37.15px;
+    padding: 27px 38.15px;
 
     font-size: 23px;
     color: white;
@@ -180,12 +183,12 @@ body {
 }
 
 .about {
-    margin-bottom: 42px;
+    margin-bottom: 45px;
 }
 
 .about-title {
     margin: 0;
-    margin-bottom: 28px;
+    margin-bottom: 26px;
 
     letter-spacing: 0.3px;
 }
@@ -210,34 +213,45 @@ body {
     display: flex;
     /* flex-wrap: wrap; */
     margin-bottom: 129px;
+    /* margin-right: -30px; */
 }
 
 .approaches-picture {
     position: relative;
 
     display: flex;
-    align-items: flex-end;
-    width: 49.1%;
+    /* flex-shrink: 0; */
+    /* flex-direction: column; */
+    /* align-items: flex-end; */
+    /* width: 49.1%; */
+    flex-basis: 870px;
+    margin-right: 30px;
     overflow: hidden;
 
-    background: url("/src/img/decor/about-img.jpg") no-repeat;
+    /* background: url("/src/img/decor/about-img.jpg") no-repeat; */
 } 
 
+.approaches-picture__img {
+    object-fit: cover;
+    width: 100%;
+}
+
 .approaches-picture__content {
-    position: relative;
+    position: absolute;
     bottom: 0;
+    right: 0;
 
     display: flex;
     align-items: center;
     padding: 26px 69px 28px 54px;
-    width: 100%;
+    /* width: 100%; */
     overflow: hidden;
 
     color: white;
     font-weight: bold;
     font-size: 16px;
 
-    background: inherit;
+    background: url("/src/img/decor/about-img.jpg") no-repeat;
     background-position: bottom;
 }
 
@@ -269,7 +283,9 @@ body {
 }
 
 .approaches-list {
-    width: 49.2%;
+    /* width: 49.2%; */
+    width: 870px;
+    flex-shrink: 0;
     margin-left: auto;
 }
 
@@ -281,8 +297,7 @@ body {
     position: relative;
     
     margin-bottom: 30px;
-    /* padding: 66px 116px 49px 300px; */
-    min-height: 295px;
+    padding: 66px 116px 49px 300px;
 
     font-size: 16px;
     line-height: 32px;
@@ -300,8 +315,8 @@ body {
  
 .consult-approach .approaches-item-wrapper:before {
     position: absolute;
-    top: 58px;
-    left: 82px;
+    top: 59px;
+    left: 81px;
     width: 189px;
     content: url("/src/img/decor/consult-approach-decor.svg");
     display: block;
@@ -309,8 +324,8 @@ body {
 
 .improve-approach .approaches-item-wrapper:before  {
     position: absolute;
-    top: 49px;
-    left: 82px;
+    top: 46px;
+    left: 81px;
     width: 189px;
     content: url("/src/img/decor/improve-approach-decor.svg");
     display: block;
@@ -355,7 +370,7 @@ body {
     margin-top: -8px;
     margin-bottom: 7px;
     
-    letter-spacing: 0.2px;
+    letter-spacing: 0.1px;
 }
 
 .step-content__description {
@@ -367,7 +382,7 @@ body {
 }
 
 .step-content__more {
-    padding: 20px 33px 20px 41px;
+    padding: 19px 32px 22px 41px;
     margin-right: 30px;
 
     font-weight: bold;
@@ -377,7 +392,7 @@ body {
 }
 
 .step-content__contract {
-    padding: 19px 39px 20px 35px;
+    padding: 18px 38px 21px 35px;
 
     color: var(--common-text-color);
 
@@ -411,6 +426,21 @@ body {
 
     border-top: 1px solid var(--border-color);
     border-bottom: 1px solid var(--border-color);
+}
+
+.faq-list__item summary {
+    list-style: none;
+}
+
+.faq-list__item summary:after {
+    content: url("/src/img/decor/faq-more-btn.svg");
+    position: absolute;
+    top: 32px;
+    right: 2px;
+
+    display: block;
+
+    cursor: pointer;
 }
 
 .faq-list__item span {
@@ -610,4 +640,8 @@ body {
         width: 100%;
         flex-grow: 1;
     } */
+}
+
+@media screen and (max-width: 1634px) {
+    /* Для картинки и карточек в блоке О нас */
 }
