--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -145,7 +145,7 @@ header, section, footer {
 }
 
 .promo-content-container {
-    width: 57%;
+    width: 896px;
     padding-top: 102px;
     padding-left: 78px;
     height: 620px;
@@ -216,24 +216,17 @@ header, section, footer {
 
 .approaches-wrapper {
     display: flex;
-    /* flex-wrap: wrap; */
     margin-bottom: 129px;
-    /* margin-right: -30px; */
 }
 
 .approaches-picture {
     position: relative;
 
     display: flex;
-    /* flex-shrink: 0; */
-    /* flex-direction: column; */
-    /* align-items: flex-end; */
-    /* width: 49.1%; */
     flex-basis: 870px;
     margin-right: 30px;
     overflow: hidden;
 
-    /* background: url("/src/img/decor/about-img.jpg") no-repeat; */
 } 
 
 .approaches-picture__img {
@@ -258,12 +251,6 @@ header, section, footer {
 
     background: url("/src/img/decor/about-img-blur.jpg") no-repeat;
     background-position: bottom;
-}
-
-@media screen and (max-width: 1802px) {
-    .approaches-picture__content {
-        background-size: cover;
-    }
 }
 
 .approaches-picture__content:after {
@@ -308,7 +295,7 @@ header, section, footer {
     position: relative;
     
     margin-bottom: 30px;
-    padding: 66px 116px 49px 300px;
+    padding: 66px 0 49px 300px;
 
     font-size: 16px;
     line-height: 32px;
@@ -320,8 +307,12 @@ header, section, footer {
     margin-bottom: -9px;
 }
 
+.approaches-item p {
+    width: 75%;
+}
+
 .consult-approach .approaches-item-wrapper {
-    padding: 73px 116px 49px 300px; 
+    padding: 73px 0 49px 300px; 
 }
  
 .consult-approach .approaches-item-wrapper:before {
@@ -573,7 +564,6 @@ header, section, footer {
 .request-action-container {
     display: flex;
     align-items: center;
-    /* justify-content: space-between; */
 }
 
 .request-form label {
@@ -615,7 +605,7 @@ header, section, footer {
     align-items: center;
 }
 
-.request-form input[type="submit"] {
+input.request-form__submit {
     width: 47%;
     min-width: 165px;
     /* padding: 20px 54px 20px 52px; */
@@ -659,20 +649,6 @@ header, section, footer {
 
 @media screen and (max-width: 1910px) {
 
-    /* .approaches-wrapper {
-        justify-content: flex-start;
-    }
-
-    .approaches-picture {
-        width: 100%;
-        flex-grow: 1;
-    }
-
-    .approaches-list {
-        width: 100%;
-        flex-grow: 1;
-    } */
-
     .footer-wrapper {
         justify-content: space-between;
     }
@@ -702,8 +678,80 @@ header, section, footer {
     }
 }
 
+
+@media screen and (max-width: 1802px) {
+    .approaches-picture__content {
+        min-height: 176px;
+
+        background-size: cover;
+    }
+
+    .approaches-picture__content:after {
+        height: 0;
+    }
+}
+
 @media screen and (max-width: 1600px) {
+
     .step-content {
         margin-right: 80px;
+    }
+
+    .about p {
+        width: 86%;
+    }
+}
+
+@media screen and (max-width: 1550px) {
+    .approaches-wrapper {
+        flex-wrap: wrap;
+    }
+
+    .approaches-picture {
+        flex-grow: 1;
+        margin-bottom: 30px;
+        margin-right: 0;
+    }
+
+    .approaches-list {
+        flex-shrink: 1;
+        margin-left: 0;
+        width: 100%;
+    }
+
+    .approaches-items__item p {
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+    .footer-info-container {
+        flex-basis: 27%;
+    }
+
+    .request-container {
+        min-width: 406px;
+    }
+
+    .about p {
+        width: 100%;
+    }
+
+    .request-action-container {
+        flex-direction: column;
+    }
+
+    input.request-form__submit {
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 22px;
+    }
+
+    .request-form label:before {
+        top: 1px;
+    }
+
+    .request-form label:after {
+        top: 4px;
     }
 }
