--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -88,8 +88,8 @@ header, section, footer {
     min-height: 100px;
 }
 
-.main-header-logo {
-    max-width: 224px;
+.main-header-logo-container {
+    margin-right: 40px;
     align-self: center;
 }
 
@@ -99,7 +99,7 @@ header, section, footer {
     align-items: center;
     margin-right: -85px;
     margin-left: auto;
-    padding-top: 4px;
+    padding-top: 5px;
 }
 
 .main-header-list__item {
@@ -111,13 +111,67 @@ header, section, footer {
 }
 
 .main-header-nav__link {
+    position: relative;
     display: flex;
 }
 
+.main-header-nav__link::after {
+    content: "";
+    position: absolute;
+    bottom: -6px;
+    
+    display: block;
+    width: 0%;
+    height: 2px;
+
+    background-color: var(--button-color);
+    transition: width 0.2s;
+}
+
+.main-header-nav__link:hover:after {
+    width: 100%;
+}
+
 .main-header__search {
-    margin-left: 70px;
-    padding-right: 12px;
     align-self: center;
+    margin-left: 75px;
+    padding-right: 12px;
+}
+
+.main-header__search path,
+.main-header__search circle {
+    transition: fill 0.2s, stroke 0.2s;
+}
+
+.main-header__search:hover path {
+    fill: #FF9900;
+}
+
+.main-header__search:hover circle {
+    stroke: #FF9900;
+}
+
+.main-header__burger-menu {
+    display: none;
+    align-self: center;
+    padding-top: 2px;
+    transform: rotate(180deg);
+}
+
+.main-header__burger-menu rect {
+    transition: width 0.2s, fill 0.2s;
+}
+
+.main-header__burger-menu:hover rect {
+    fill: #FF9900;
+}
+
+.main-header__burger-menu:hover rect:nth-child(2) {
+    width: 25px;
+}
+
+.main-header__burger-menu:hover rect:first-child {
+    width: 20px;
 }
 
 .main-header-nav__link {
@@ -138,6 +192,8 @@ header, section, footer {
 }
 
 .promo-container {
+    position: relative;
+
     color: white;
 
     background: url("/src/img/decor/promo-back.jpg") no-repeat;
@@ -161,7 +217,7 @@ header, section, footer {
     line-height: 86px;
 }
 
-.promo-description {
+.promo__description {
     margin-top: 0;
     margin-bottom: 125px;
 
@@ -179,11 +235,20 @@ header, section, footer {
     line-height: 1;
 
     background-color: var(--button-color);
-    transition: box-shadow, 0.3s;
+    transition: background-color, 0.2s;
 }
 
 .promo-button:hover {
-    /* box-shadow: 5px 5px 0px 0px rgba(255, 255, 255, 0.8); */
+    background-color: rgba(255, 153, 0, 0.6);
+}
+
+.promo__slider-control {
+    position: absolute;
+    left: 420px;
+    right: 0;
+    bottom: 28px;
+
+    display: none;
 }
 
 .about {
@@ -270,6 +335,15 @@ header, section, footer {
     filter: blur(10px);
 }
 
+.approaches__button {
+    background-color: transparent;
+    transition: background-color 0.2s;
+}
+
+.approaches__button:hover {
+    background-color: var(--button-color);
+}
+
 .approaches-picture__content p {
     z-index: 2;
     flex-basis: 67%;
@@ -284,7 +358,6 @@ header, section, footer {
 
 .approaches-list {
     width: 49.2%;
-    /* width: 870px; */
     flex-shrink: 0;
     margin-left: auto;
 }
@@ -293,10 +366,13 @@ header, section, footer {
     margin-bottom: -30px;
 }
 
+.approaches-items__item {
+    margin-bottom: 30px;
+}
+
 .approaches-item-wrapper {
     position: relative;
     
-    margin-bottom: 30px;
     padding: 66px 50px 49px 300px;
 
     font-size: 16px;
@@ -316,23 +392,23 @@ header, section, footer {
 .consult-approach .approaches-item-wrapper {
     padding-top: 73px; 
 }
+
+.approaches-item-wrapper:before {
+    position: absolute;
+    
+    display: block;
+    left: 81px;
+    width: 189px;
+}
  
 .consult-approach .approaches-item-wrapper:before {
-    position: absolute;
-    top: 59px;
-    left: 81px;
-    width: 189px;
     content: url("/src/img/decor/consult-approach-decor.svg");
-    display: block;
+    top: 59px;
 }
 
-.improve-approach .approaches-item-wrapper:before  {
-    position: absolute;
-    top: 46px;
-    left: 81px;
-    width: 189px;
+.improve-approach .approaches-item-wrapper:before {
     content: url("/src/img/decor/improve-approach-decor.svg");
-    display: block;
+    top: 46px;
 }
 
 .our-work-title {
@@ -366,12 +442,18 @@ header, section, footer {
 }
 
 .work-steps__step {
-    margin-right: 90px;
+    position: relative;
+
+    margin-right: 89px;
 
     font-size: 18px;
 }
 
-.work-steps__step.active {
+.work-steps__step:last-child {
+    margin-right: 0;
+}
+
+.work-steps__step--active {
     color: var(--button-color);
 }
 
@@ -411,8 +493,18 @@ header, section, footer {
 
     color: var(--common-text-color);
 
+    background-color: transparent;
     border: 1px solid black;
+    transition: color 0.2s, background-color 0.2s;
 }
+
+.step-content__contract:hover {
+    color: white;
+
+    background-color: var(--common-text-color);
+}
+
+.step-content__contract:hover
 
 .our-work {
     margin-bottom: 86px;
@@ -450,7 +542,12 @@ header, section, footer {
 .faq__question {
     display: inline-block;
 
+    transition: color 0.2s;
     cursor: pointer;
+}
+
+.faq__question:hover {
+    color: var(--button-color);
 }
 
 .faq-list__item summary {
@@ -466,6 +563,11 @@ header, section, footer {
     display: block;
 
     cursor: pointer;
+    transition: content 0.2s;
+}
+
+.faq-list__item summary:hover:after {
+    content: url("/src/img/decor/faq-more-btn-hover.svg");
 }
 
 .faq-list__item span {
@@ -763,6 +865,286 @@ input.request-form__submit {
     }
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1024px) {
+    header,
+    section,
+    footer {
+        padding: 0 50px;
+    }
 
+    .main-header-logo img {
+        width: 150px;
+        height: 48px;
+    }
+
+    .main-header-list {
+        padding-top: 2px;
+    }
+    
+    .main-header-list__item {
+        margin-right: 59px;
+
+        font-size: 16px;
+    }
+
+    .main-header__search {
+        margin-right: 29px;
+        padding-right: 0;
+        padding-top: 4px;
+        margin-left: 104px;
+    }
+
+    .main-header__burger-menu {
+        display: block;
+    }
+
+    .promo {
+        margin-bottom: 63px;
+    }
+
+    .promo-container {
+        min-height: 668px;
+
+        background: url("/src/img/decor/promo-back-1024.jpg") no-repeat;
+        background-position-y: -101px;
+        background-size: cover;
+    }
+
+    .promo-content-container {
+        padding-top: 159px;
+        padding-left: 45px;
+        height: 0;
+        width: 89%;
+
+        letter-spacing: 0px;
+    }
+
+    .main-title {
+        margin-bottom: 10px;
+
+        font-size: 60px;
+        line-height: 73px;
+    }
+
+    .promo__description  {
+        margin-bottom: 137px;
+
+        font-size: 20px;
+        line-height: 24px;
+    }
+
+    .promo-button {
+        padding: 25px 38.15px;
+        font-size: 24px;
+    }
+
+    .promo__slider-control {
+        display: block;
+    }
+
+    .slider-control-btn {
+        margin-right: 16px;
+    }
+
+    .slider-control-btn {
+        width: 15px;
+        height: 15px;
+        
+        background-color: rgba(255, 255, 255, 0.4);
+        transition: border 0.2s;
+        border: 1px solid transparent;
+        border-radius: 50%;
+    }
+
+    .slider-control-btn:hover {
+        border: 1px solid #ffffff;
+    }
+
+    .slider-control-btn--active {
+        background-color: #ffffff;
+        border: 1px solid #ffffff;
+    }
+
+    .about {
+        margin-bottom: 60px;
+    }
+
+    .about-title {
+        margin-left: -3px;
+        margin-bottom: 30px;
+    }
+
+    .approaches-picture {
+        margin-bottom: 50px;
+
+        overflow: visible;
+    }
+
+    .approaches-picture__content {
+        bottom: -10px;
+
+        min-height: 173px;
+        padding: 16px 52px 16px 44px;
+    }
+
+    .approaches-picture__content p {
+        flex-basis: 60%;
+        line-height: 32px;
+    }
+
+    .approaches__button {
+        padding: 20px 34px 18px 36px;
+    }
+
+    .consult-approach {
+        margin-bottom: 40px;
+    }
+
+    .consult-approach .approaches-item-wrapper {
+        padding-top: 68px;
+        padding-left: 348px;
+        padding-bottom: 50px;
+    }
+
+    .improve-approach .approaches-item-wrapper {
+        padding-top: 68px;
+        padding-left: 348px;
+    }
+
+    .consult-approach .approaches-item-wrapper:before {
+        top: 64px;
+        left: 111px;
+    }
+
+    .improve-approach .approaches-item-wrapper::before {
+        top: 57px;
+        left: 105px;
+    }
+    
+    .approaches-item-title {
+        margin-bottom: -8px;
+    }
+
+    .approaches-items__item p {
+        width: 86%;
+    }
+
+    .approaches {
+        margin-bottom: 64px;
+    }
+
+    .our-work-title {
+        margin-left: -6px;
+    }
+
+    .work-steps {
+        position: relative;
+
+        width: 51%;
+    }
+
+    .work-steps:before,
+    .work-steps__step--active:before
+     {
+        content: "";
+        position: absolute;
+        top: -13px;
+        
+        display: block;
+        width: 100%;
+        height: 3px;
+
+        background-color: var(--footer-text-color);
+
+    }
+
+    .work-steps__step--active:before {
+        background-color: var(--button-color);
+    }
+
+    .step-content {
+        width: 437px;
+        margin-right: 50px;
+    }
+
+    .step-content__description {
+        margin-bottom: 28px;
+    }
+
+    .step-content__more {
+        padding: 21px 38px 19px 38px;
+        margin-right: 26px;
+    }
+
+    .step-content__contract {
+        padding: 22px 37px 20px 37px;
+    }
+
+    .step-image img {
+        height: auto;
+    }
+
+    .our-work {
+        margin-bottom: 59px;
+    }
+
+    .faq {
+        margin-bottom: 58px;
+    }
+
+    .faq-title {
+        margin-left: -3px;
+    }
+
+    .faq__question {
+        font-size: 20px;
+        line-height: 32px;
+    }
+
+    .faq-list {
+        padding-left: 0;
+    }
+
+    .faq-list__item {
+        padding-right: 172px;
+    }
+
+    .faq-list__item:first-child {
+        padding-top: 47px;
+        padding-bottom: 43px;
+    }
+
+    .faq-list__item summary::after {
+        right: 0;
+    }
+
+    .faq-list__item:first-child summary::after {
+        top: 34%;
+    }
+
+    .faq-list__item:nth-child(2) {
+        padding-top: 23px;
+        padding-bottom: 27px;
+    }
+
+    .faq-list__item summary::after, 
+    .faq-list__item:nth-child(2) summary::after {
+        top: 29%;
+    }
+
+    .faq-list__item:nth-child(3) {
+        padding-top: 38px;
+        padding-bottom: 43px;
+    }
+
+    .faq-list__item:nth-child(4) {
+        padding-top: 23px;
+        padding-bottom: 26px;
+    }
+
+    .faq-list__item:nth-child(5) {
+        padding-top: 38px;
+        padding-bottom: 43px;
+    }
+    
 }
